apps/general/chromium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chromium-cloudflare
  namespace: chromium
spec:
  ingressClassName: cloudflare
  rules:
    - host: chrome.${DOMAIN_0}
      http:
        paths:
          - backend:
              service:
                name: chromium
                port:
                  number: 8080
            path: /
            pathType: Prefix
